<resources>
    <string name="app_name">Tamang Food Services</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tamang_foodservice">Tamang FoodService</string>
    <string name="get_started">GET STARTED</string>
    <string name="welcome">Welcome</string>
    <string name="welcomeText">"It's a pleasure to meet you. We are excited that you're here so let's get started!"</string>
    <string name="all_your_fav">All your favorites</string>
    <string name="all_your_fav_text">Order from the best local restaurants with easy, on-demand delivery.</string>
    <string name="free_delivery_text">Free delivery for new customers via Apple Pay and others payment methods.</string>
    <string name="choose_food_text">Easily find your type of food craving and you\'ll get delivery in wide range</string>
    <string name="choose_food">Choose your food</string>
    <string name="free_delivery">Free delivery offers</string>
    <string name="dot">.</string>
    <string name="forgot_password">Forgot password</string>
    <string name="forgot_text">Enter your email address and we will send you a reset instructions.</string>
    <string name="email_address">Email address</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="email_address_cap">EMAIL ADDRESS</string>
    <string name="email_to">We have sent a instructions email to. Your Email ID</string>
    <string name="having_problem">Having Problem?</string>
    <string name="reset_email_sent">Reset email sent</string>
    <string name="welcome_to_tamang_food_services">Welcome to Tamang Food Services</string>
    <string name="enter_your_email_address">Enter your Email address for sign in. Enjoy your food :)</string>
    <string name="password">PASSWORD</string>
    <string name="forgot_password_1"> Forgot Password? </string>
    <string name="sign_in">SIGN IN</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="create_new_account">Create new account</string>
    <string name="send_again">SEND AGAIN</string>
    <string name="create_account">Create Account</string>
    <string name="enter_your_name_email_and_password_for_sign_up">Enter your Name, Email and Password for sign up.</string>
    <string name="already_have_account">Already have account?</string>
    <string name="name">NAME</string>
    <string name="sign_up">SIGN UP</string>
    <string name="by_signing_up_you_agree_to_our_terms_conditions_privacy_policy"><![CDATA[By Signing up you agree to our Terms Conditions & Privacy Policy.]]></string>
    <string name="coffee">Coffee</string>
    <string name="get_started_with_foodly">Get started with Foodly</string>
    <string name="enter_your_phone_number_to_use_foodly_and_enjoy_your_food">Enter your phone number to use foodly and enjoy your food :)</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="verify_phone_number">Verify phone number</string>
    <string name="enter_the_4_digit_code">Enter the 4-Digit code sent to you at</string>
    <string name="continue1">CONTINUE</string>
    <string name="didn_t_receive_code">Didn’t receive code?</string>
    <string name="resend_again">Resend Again.</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="find_restaurants_near_you">Find restaurants near you</string>
    <string name="please_enter_your_location_or_allow_access_to_your_location_to_find_restaurants_near_you">Please enter your location or allow access to your location to find restaurants near you.</string>
    <string name="use_current_location">Use current location</string>
    <string name="google_maps_key">AIzaSyAwhv_yaff14GqdUVONIMTJM-IVt_3wnIw</string>
    <string name="categories">CATEGORIES</string>
    <string name="clear_all">CLEAR ALL</string>
    <string name="underscore">_</string>
    <string name="add_your_payment_methods">Add your payment methods</string>
    <string name="this_card_will_only_be_charged_when_you_place_an_order">This card will only be charged when you place an order.</string>
    <string name="_4343_4343_4343_4343">4343 4343 4343 4343</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="add_card">ADD CARD</string>
    <string name="scan_card">SCAN CARD</string>
    <string name="cookie_sandwich">Cookie Sandwich</string>
    <string name="shortbread_chocolate_turtle_cookies_and_red_velvet_8_ounces_cream_cheese_softened">Shortbread, chocolate turtle cookies, and red velvet. 8 ounces cream cheese, softened.</string>
    <string name="chinese_american_deshi_food">$$ - Chinese - American - Deshi Food</string>
    <string name="choice_of_top_cookie">Choice of top Cookie</string>
    <string name="choice_of_bottom_cookie">Choice of Bottom Cookie</string>
    <string name="chocolate_chip">Chocolate Chip</string>
    <string name="cookies_and_cream">Cookies and Cream</string>
    <string name="funfetti">Funfetti</string>
    <string name="m_and_m">M and M</string>
    <string name="red_velvet">Red Velvet</string>
    <string name="peanut_butter">Peanut Butter</string>
    <string name="snickerdoodle">Snickerdoodle</string>
    <string name="white_chocolate_macadamia">White Chocolate Macadamia</string>

    <string name="add_special_instructions">Add Special Instructions</string>
    <string name="forward"><![CDATA[>]]></string>
    <string name="minus">-</string>
    <string name="_01">01</string>
    <string name="plus">+</string>
    <string name="add_to_order">ADD TO ORDER</string>
    <string name="search_again">Search Again</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="all">ALL</string>
    <string name="brunch">BRUNCH</string>
    <string name="dinner">DINNER</string>
    <string name="chineseCap">CHINESE</string>
    <string name="chinese">Chinese</string>
    <string name="pizza">PIZZA</string>
    <string name="salads">SALADS</string>
    <string name="soups">SOUPS</string>
    <string name="breakfast">BREAKFAST</string>
    <string name="dietary">DIETARY</string>
    <string name="any">ANY</string>
    <string name="vegetarian">VEGETARIAN</string>
    <string name="vegan">VEGAN</string>
    <string name="gluten_free">GLUTEN-FREE</string>
    <string name="price_range">PRICE RANGE</string>
    <string name="dollar1">$</string>
    <string name="dollar2">$$</string>
    <string name="dollar3">$$$</string>
    <string name="dollar4">$$$$</string>
    <string name="dollar5">$$$$$</string>
    <string name="apply_filters">APPLY FILTERS</string>
    <string name="burger">BURGER</string>
    <string name="delivery_to">DELIVERY TO</string>
    <string name="filter">Filter</string>
    <string name="featured_partners">Featured Partners</string>
    <string name="see_all">See All</string>
    <string name="best_picks_restaurants_by_team">Best Picks Restaurants by team</string>
    <string name="all_restaurants">All Restaurants</string>
    <string name="search_on_foodly">Search on Foodly</string>
    <string name="top_restaurants">Top Restaurants</string>
    <string name="top_categories">Top Categories</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="cancel">Cancel</string>
    <string name="mayfield_bakery_amp_cafe"><![CDATA[Mayfield Bakery & Cafe]]></string>
    <string name="_4_3">4.3</string>
    <string name="_200_ratings">200+ Ratings</string>
    <string name="featured_items">Featured Items</string>
    <string name="most_populars">Most Populars</string>
    <string name="sea_food">Sea Food</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery">Delivery</string>
    <string name="aud_30">AUD$30</string>
    <string name="_0">$0</string>
    <string name="add_more_items">Add More Items</string>
    <string name="promo_code">Promo Code</string>
    <string name="total_incl_vat">Total(incl. VAT)</string>
    <string name="_25_min">25 Min</string>
    <string name="free">Free</string>
    <string name="_4_5">4.5</string>
    <string name="american">American</string>
    <string name="location">Location</string>
    <string name="free_deliver">Free Delivery</string>
    <string name="search_results">Search Results</string>
    <string name="chinesedollor">$$ - Chinese</string>
    <string name="_10">AUD$10</string>
    <string name="textview">TextView</string>
    <string name="required">REQUIRED</string>


</resources>