<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilterFragment">


    <TextView
        android:id="@+id/tvCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/yugothil"
        android:textStyle="bold"
        android:text="@string/categories"
        android:textSize="@dimen/t16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvClearAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:background="@color/trans"
        android:fontFamily="@font/yugothil"
        android:text="@string/clear_all"
        android:textStyle="bold"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvCategories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvCategories" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCategories">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipAll"
            style="@style/CustomChipChoice"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yugothib"
            android:paddingHorizontal="30dp"
            android:text="@string/all"
            android:textSize="12sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipBrunch"
            style="@style/CustomChipChoice"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yugothib"
            android:text="@string/brunch"
            android:textSize="12sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipDinner"
            style="@style/CustomChipChoice"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yugothib"
            android:text="@string/dinner"
            android:textSize="12sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipBurger"
            style="@style/CustomChipChoice"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yugothib"
            android:text="@string/burger"
            android:textSize="12sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipChinese"
            style="@style/CustomChipChoice"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yugothib"
            android:text="@string/chineseCap"
            android:textSize="12sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipPizza"
            style="@style/CustomChipChoice"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yugothib"
            android:text="@string/pizza"
            android:textSize="12sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSalad"
            style="@style/CustomChipChoice"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yugothib"
            android:text="@string/salads"
            android:textSize="12sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSoup"
            style="@style/CustomChipChoice"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yugothib"
            android:text="@string/soups"
            android:textSize="12sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipBF"
            style="@style/CustomChipChoice"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yugothib"
            android:text="@string/breakfast"
            android:textSize="12sp" />

    </com.google.android.material.chip.ChipGroup>


    <TextView
        android:id="@+id/tvDietary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/yugothil"
        android:text="@string/dietary"
        android:textStyle="bold"
        android:textSize="@dimen/t16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipCategories" />

    <TextView
        android:id="@+id/tvClearAllDietary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:background="@color/trans"
        android:fontFamily="@font/yugothil"
        android:text="@string/clear_all"
        android:textStyle="bold"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvDietary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvDietary" />


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipDietary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDietary">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipAny"
            style="@style/CustomChipChoice"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yugothib"
            android:paddingHorizontal="20dp"
            android:text="@string/any"
            android:textSize="12sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipVeg"
            style="@style/CustomChipChoice"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yugothib"
            android:text="@string/vegetarian"
            android:textSize="12sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipVegan"
            style="@style/CustomChipChoice"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yugothib"
            android:text="@string/vegan"
            android:textSize="12sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipGluten"
            style="@style/CustomChipChoice"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yugothib"
            android:text="@string/gluten_free"
            android:textSize="12sp" />


    </com.google.android.material.chip.ChipGroup>


    <TextView
        android:id="@+id/tvPriceRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/yugothil"
        android:text="@string/price_range"
        android:textStyle="bold"
        android:textSize="@dimen/t16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipDietary" />

    <TextView
        android:id="@+id/tvClearAllPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:background="@color/trans"
        android:fontFamily="@font/yugothil"
        android:text="@string/clear_all"
        android:textStyle="bold"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvPriceRange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvPriceRange" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipPriceRange"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="10dp"
        android:foregroundGravity="top"
        app:layout_constraintBottom_toTopOf="@+id/btnApplyFilters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPriceRange">

        <com.google.android.material.chip.Chip
            android:id="@+id/dollar1"
            style="@style/CustomChipChoice"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yugothib"
            android:paddingHorizontal="20dp"
            android:text="@string/dollar1"
            android:textSize="12sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/dollar2"
            style="@style/CustomChipChoice"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yugothib"
            android:text="@string/dollar2"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="162dp"
            tools:layout_editor_absoluteY="101dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/dollar3"
            style="@style/CustomChipChoice"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yugothib"
            android:text="@string/dollar3"
            android:textSize="12sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/dollar4"
            style="@style/CustomChipChoice"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yugothib"
            android:text="@string/dollar4"
            android:textSize="12sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/dollar5"
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yugothib"
            android:text="@string/dollar5"
            android:textSize="12sp" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnApplyFilters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/intro_button_bg"
        android:fontFamily="@font/yugothib"
        android:gravity="center_horizontal|center_vertical"
        android:letterSpacing=".3"
        android:text="@string/apply_filters"
        android:textColor="@color/White"
        android:textSize="@dimen/t14"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>