<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.SignInFragment">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/yugothil"
        android:text="@string/welcome_to_tamang_food_services"
        android:textColor="#010F07"
        android:textSize="33sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCreateWelcomeText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/yugothib"
        android:text="@string/enter_your_email_address"
        android:textColor="#868686"
        android:textSize="@dimen/t16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <LinearLayout
        android:id="@+id/createEMAIL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreateWelcomeText">


        <TextView
            android:id="@+id/tvSignInEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yugothil"
            android:text="@string/email_address_cap"
            android:textStyle="bold"
            android:textAppearance="@style/email_address"
            android:textColor="#868686"
            android:textSize="@dimen/t16" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSignInEmailID"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="@font/yugothib"
            android:hint="@string/enter_email_id"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="#010F07"
            android:textSize="@dimen/t16"
            tools:ignore="LabelFor,RtlSymmetry" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/createPassWord"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createEMAIL">


        <TextView
            android:id="@+id/tvSignInPW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yugothil"
            android:textStyle="bold"
            android:text="@string/password"
            android:textAppearance="@style/email_address"
            android:textColor="#868686"
            android:textSize="@dimen/t16" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSignInPW"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="@font/yugothib"
            android:hint="@string/enter_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#010F07"
            android:textSize="@dimen/t16"
            tools:ignore="LabelFor,RtlSymmetry" />

    </LinearLayout>


    <TextView
        android:id="@+id/tvForgotPW"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@color/trans"
        android:fontFamily="@font/yugothil"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:paddingHorizontal="10dp"
        android:text="@string/forgot_password_1"
        android:textColor="#010F07"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createPassWord" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/intro_button_bg"
        android:fontFamily="@font/yugothib"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/sign_in"
        android:textColor="@color/White"
        android:textSize="@dimen/t14"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPW"
        tools:ignore="TextContrastCheck" />


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="bottom|center"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_weight=".7"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/yugothil"
            android:gravity="center"
            android:text="@string/don_t_have_account"
            android:textStyle="bold"
            android:textColor="#010F07"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGoToSignUp"
            android:layout_width="160dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@color/trans"
            android:fontFamily="@font/yugothil"
            android:gravity="center"
            android:text="@string/create_new_account"
            android:textStyle="bold"
            android:textColor="#EEA734"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>