<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search.SearchFragment">

    <TextView
        android:id="@+id/tvSearchView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="@dimen/d10"
        android:layout_marginTop="0dp"
        android:text="@string/search_on_foodly"
        android:fontFamily="@font/yugothib"
        android:gravity="center_vertical"
        android:textSize="@dimen/t16"
        android:drawablePadding="@dimen/d10"
        android:paddingHorizontal="@dimen/d10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableStartCompat="@drawable/ic_search_item" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/top_restaurants"
        android:fontFamily="@font/yugothib"
        android:textColor="@color/Black"
        android:textSize="@dimen/t16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSearchView" />

    <TextView
        android:id="@+id/tvTopCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/top_categories"
        android:fontFamily="@font/yugothib"
        android:textColor="@color/Orange"
        android:textSize="@dimen/t16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSearchView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearchTopRestaurants"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/d10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />


</androidx.constraintlayout.widget.ConstraintLayout>